--- a/_config_fr.yml
+++ b/_config_fr.yml
@@ -33,7 +33,7 @@ lexicon2marked: marquées
 lexicalentry1etymology: Étymologie
 lexicalentry2roots: Racines
 lexicalentry3variants: Variantes
-lexicalentry4letternumbering: " ABCDEFG"
+lexicalentry4letternumbering: " ABCDEFGH"
 lexicalentry5mentionedin: "Apparitions dans le texte biblique :"
 index1title: Page principale
 index2intro: Les lexiques ordonnés par fréquence sont marqués
